--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,5 +1,16 @@
+.container {
+    margin: 0 auto;
+    max-width: 1280px;
+}
+
 .grid{
-   
+    box-sizing: border-box;
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    /* max-width: 100%;
+    width: 100%; */
 
     grid-template:
     [row1-start] "top top top top top" [row1-end]
@@ -7,6 +18,5 @@
     [row3-start] "bottom bottom bottom bottom bottom" [row3-end]
     [row3-start] "bottom bottom bottom"  [row3-end];
 
-    
-
 }
+
