--- a/src/components/Picture/Picture.css
+++ b/src/components/Picture/Picture.css
@@ -1,15 +1,12 @@
 .picture {
     background: #fff;
     border-radius: 2px;
-    /* margin: 3px;
-    margin-top: 3px; */
+    margin-top: 3px;
     box-shadow: 0 3px 3px #999, 0 3px 3px #999;
-    overflow: hidden;
-    height: 200px;
-    width:200px;
+    overflow: hidden; 
+    width: 150px;
+    height: 150px;
   }
 
-  .grid div:nth-child(1) {
-    order: 3;
-}
+
 
