--- a/src/components/Picture/Picture.css
+++ b/src/components/Picture/Picture.css
@@ -4,15 +4,28 @@
     margin-top: 3px;
     box-shadow: 0 3px 3px #999, 0 3px 3px #999;
     overflow: hidden; 
-    width: 150px;
-    height: 150px;
   }
 
-  .largePic{
+ .span2{
+   /* grid-column: 2/6; */
+   margin: 0;
+   padding: 0px;
+   grid-column-end: span 2;
+   grid-row-end: span 2;
+   width: 400px;
+   height: 400px;
 
-    width: 300px;
-    height:300px;
-  }
+ }
+
+ .span1{
+  /* grid-column: 3/6; */
+  width: 200px;
+  height: 200px;
+  margin: 0px;
+  padding:0px;
+  grid-column-end: span 1;
+  grid-row-end: span 1;
+ }
 
 
 
